# sprints-automotive

./: .gitignore  README.md
9.MISRA/S_MISRA_01 DIO driver MISRA compliant/: CMakeLists.txt  Led Sequence V1.0.atsln  Led Sequence V1.0.cproj  README.md  main.c  main.h
9.MISRA/S_MISRA_01 DIO driver MISRA compliant/APP/: app_interface.h  app_program.c
9.MISRA/S_MISRA_01 DIO driver MISRA compliant/HAL/btn/: btn_interface.h  btn_program.c
9.MISRA/S_MISRA_01 DIO driver MISRA compliant/HAL/led/: led_interface.h  led_program.c
9.MISRA/S_MISRA_01 DIO driver MISRA compliant/LIB/: bit_manipulation.h  std.h
9.MISRA/S_MISRA_01 DIO driver MISRA compliant/MCAL/dio/: dio_interface.h  dio_private.h  dio_program.c
9.MISRA/S_MISRA_01 DIO driver MISRA compliant/MCAL/timer/: timer_private.h  timer_program.c
9.MISRA/S_MISRA_01 DIO driver MISRA compliant/Simulation/: Backup Of Proteus_LED_Sequence_V1.0.pdsbak  Led Sequence V1.0.elf  Led Sequence V1.0.hex  Proteus_LED_Sequence_V1.0.pdsprj
9.MISRA/S_MISRA_02 Timer driver MISRA compliant/: CMakeLists.txt  Led Sequence V3.0.cproj  README.md  doxyfile
9.MISRA/S_MISRA_02 Timer driver MISRA compliant/APP/: app_interface.h  app_program.c
9.MISRA/S_MISRA_02 Timer driver MISRA compliant/HAL/led/: led_interface.h  led_program.c
9.MISRA/S_MISRA_02 Timer driver MISRA compliant/LIB/: interrupts.h
9.MISRA/S_MISRA_02 Timer driver MISRA compliant/MCAL/dio/: dio_interface.h  dio_program.c
9.MISRA/S_MISRA_02 Timer driver MISRA compliant/MCAL/exi/: exi_interface.h  exi_private.h  exi_program.c
9.MISRA/S_MISRA_02 Timer driver MISRA compliant/MCAL/timer/: timer_interface.h  timer_program.c
9.MISRA/S_MISRA_02 Timer driver MISRA compliant/Simulation/: Backup Of Proteus_LED_Sequence_V3.0.pdsbak  Last Loaded Proteus_LED_Sequence_V3.0.pdsbak  Led Sequence V3.0.elf  Led Sequence V3.0.hex  Proteus_LED_Sequence_V3.0.pdsprj.HACKER.Hossam.workspace
9.MISRA/S_MISRA_02 Timer driver MISRA compliant/Simulation/Project Backups/: Proteus_LED_Sequence_V3.0 [Autosaved].pdsprj
Embedded SW Design/S_DYNAMIC_08 Implement a BCM/shared/: BCM.atsln  CMakeLists.txt  README.md
Embedded SW Design/S_DYNAMIC_08 Implement a BCM/shared/BCM_Project/: .gitignore  CMakeLists.txt
Embedded SW Design/S_DYNAMIC_08 Implement a BCM/shared/Documents/: Extended_Sequence_diagram.puml  Sequence_diagram.puml
Embedded_Systems_Level_1/2_S_ESL1_02 LED sequence V1.0/: .gitignore  CMakeLists.txt  Led Sequence V1.0.cproj  README.md  main.c  main.h
Embedded_Systems_Level_1/2_S_ESL1_02 LED sequence V1.0/Application/: application.h
Embedded_Systems_Level_1/2_S_ESL1_02 LED sequence V1.0/Common/: bit_manipulation.h  types.h
Embedded_Systems_Level_1/2_S_ESL1_02 LED sequence V1.0/Docs/: DIO_API.vsdx  LED_API.vsdx  LayeredArchitecture.vsdx  StateMachine.vsdx
Embedded_Systems_Level_1/2_S_ESL1_02 LED sequence V1.0/MCAL/: registers.h
Embedded_Systems_Level_1/2_S_ESL1_02 LED sequence V1.0/Proteus/: Backup Of Proteus_LED_Sequence_V1.0.pdsbak  Last Loaded Proteus_LED_Sequence_V1.0.pdsbak  Led Sequence V1.0.hex  Proteus_LED_Sequence_V1.0.pdsprj
Embedded_Systems_Level_1/3_S_ESL1_03 - LED sequence V2.0/: .gitignore  CMakeLists.txt  Led Sequence V1.0.cproj  Led Sequence V2.0.componentinfo.xml  Led Sequence V2.0.cproj  README.md  doxySettings.xml  main.c
Embedded_Systems_Level_1/3_S_ESL1_03 - LED sequence V2.0/Application/: application.c
Embedded_Systems_Level_1/3_S_ESL1_03 - LED sequence V2.0/Docs/: Application_API.vsdx  DIO_API.vsdx  LayeredArchitecture.vsdx  StateMachine.vsdx
Embedded_Systems_Level_1/3_S_ESL1_03 - LED sequence V2.0/Proteus/: Led Sequence V2.0.elf  Proteus_LED_Sequence_V1.0.pdsprj  Proteus_LED_Sequence_V2.0.pdsprj  Proteus_LED_Sequence_V2.0.pdsprj.HACKER.Hossam.workspace
Embedded_Systems_Level_1/3_S_ESL1_03 - LED sequence V2.0/Proteus_V2.0/: Last Loaded Proteus_LED_Sequence_V2.0.pdsbak  Led Sequence V2.0.elf  Proteus_LED_Sequence_V2.0.pdsprj  Proteus_LED_Sequence_V2.0.pdsprj.HACKER.Hossam.workspace
Embedded_Systems_Level_1/3_S_ESL1_03 - LED sequence V2.0/requirements/: LED sequence v1.0 requirements.html
Embedded_Systems_Level_1/4_S_ESL1_04 - LED sequence V3.0/: CMakeLists.txt  Led Sequence V3.0.cproj  README.md
Embedded_Systems_Level_1/4_S_ESL1_04 - LED sequence V3.0/Application/: application.c  application.h
Embedded_Systems_Level_1/4_S_ESL1_04 - LED sequence V3.0/Common/: bit_manipulation.h  types.h
Embedded_Systems_Level_1/4_S_ESL1_04 - LED sequence V3.0/Proteus/: Led Sequence V3.0.elf  Led Sequence V3.0.hex  Proteus_LED_Sequence_V3.0.pdsprj  Proteus_LED_Sequence_V3.0.pdsprj.HACKER.Hossam.workspace
(+196 files in other folders)
